# Marginal-IA

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  supabase_schema.sql
.streamlit/: config.toml  secrets.toml.example
pages/: books.py  login.py  notes.py  recorder.py
structures/: book.py  note.py
utils/: db.py  export.py  isbn.py  parser.py  sidebar.py
